--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9,44 +9,6 @@
  * Config saved to config.json and https://gist.github.com/36d1870cab49e7ae7990
  */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
-@font-face {
-    font-family: 'Marianina';
-    src: url('../fonts/fontyou_-_marianina_fy_bold-webfont.eot');
-    src: url('../fonts/fontyou_-_marianina_fy_bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/fontyou_-_marianina_fy_bold-webfont.woff2') format('woff2'),
-    url('../fonts/fontyou_-_marianina_fy_bold-webfont.woff') format('woff'),
-    url('../fonts/fontyou_-_marianina_fy_bold-webfont.ttf') format('truetype'),
-    url('../fonts/fontyou_-_marianina_fy_bold-webfont.svg#marianina_fybold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Proxima Nova';
-    src: url('../fonts/proximanova-regular-webfont.eot');
-    src: url('../fonts/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/proximanova-regular-webfont.woff') format('woff'),
-    url('../fonts/proximanova-regular-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Proxima Nova';
-    src: url('../fonts/proximanova-regitalic-webfont.eot');
-    src: url('../fonts/proximanova-regitalic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/proximanova-regitalic-webfont.woff') format('woff'),
-    url('../fonts/proximanova-regitalic-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Proxima Nova';
-    src: url('../fonts/proximanova-bold-webfont.eot');
-    src: url('../fonts/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/proximanova-bold-webfont.woff') format('woff'),
-    url('../fonts/proximanova-bold-webfont.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -929,7 +891,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Proxima Nova", Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova", sans-serif;
   font-size: 18px;
   line-height: 1.5;
   color: #333333;
@@ -6180,11 +6142,11 @@ section.logos {
 }
 .intro .name {
     display: block;
-    font-family: "Marianina", sans-serif;
+    font-family: "proxima-nova-condensed", sans-serif;
     text-transform: uppercase;
     letter-spacing: -4px;
     font-size: 120px;
-    font-weight: bold;
+    font-weight: 400;
     line-height: 0.82;
     color: #af8655;
     -webkit-text-shadow: 6px 6px 0 rgba(0,0,0,0.08);
